# pysdl2-dll

./: .cirrus.yml  .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  appveyor.yml  build_extras.py  builddlls.py  dllutils.py  fix_wheels.py  getdlls.py  manylinux.sh  pyproject.toml  setup.cfg  setup.py  test.py
.github/workflows/: build.yml
sdl2dll/: __init__.py  initcheck.py
sdl2dll/tests/: test_init.py
sdl3dll/: __init__.py
tests/: test_dlls.py  test_init.py  test_sdist.py
