[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pysdl2-dll"
version = "2.32.10"
description = "Pre-built SDL2 binaries for PySDL2"
readme = "README.md"
license = "MPL-2.0"
requires-python = ">=2.7"
authors = [
    { name = "Austin Hurst", email = "mynameisaustinhurst@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/a-hurst/pysdl2-dll"
